# tealsed

./: Cargo.toml
src/: commands.rs  main.rs  parser.rs  posix.lalrpop  regex.rs
src/regex/: equivalent.rs  parser.rs  posix.rs
