[package]
name = "tsed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
lalrpop-util = { versien = "0.19.7", features = ["lexer"] }
regex = "1"
regex-syntax = "0.6.25"

[build-dependencies]
lalrpop = "0.19.6"
