[package]
name = "tsed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
nom = "7.1.1"
regex = "1"
regex-syntax = "0.6.25"

[dev-dependencies]
assert_ok = "1.0.1"